third_party/WebKit/Source/WebCore/accessibility/AccessibilityObject.h
@@ -172,6 +172,10 @@ enum AccessibilityRole {
     ListItemRole,
     MenuListPopupRole,
     MenuListOptionRole,
+    ParagraphRole,
+    LabelRole,
+    DivRole,
+    FormRole,
 
     // ARIA Grouping roles
     LandmarkApplicationRole,
